Throw an exception if window.open() gets passed a URL that cannot be parsed https://bugs.webkit.org/show_bug.cgi?id=171656

Patch by Rob Buis <rbuis@igalia.com> on 2018-08-20
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/url/failure-expected.txt:

Source/WebCore:

Throw a SyntaxError exception when an invalid url gets passed into window.open().

Tests: imported/w3c/web-platform-tests/url/failure.html
       fast/dom/Window/open-invalid-url.html

* page/DOMWindow.cpp:
(WebCore::DOMWindow::createWindow):
(WebCore::DOMWindow::open):
(WebCore::DOMWindow::showModalDialog):
* page/DOMWindow.h:
* page/DOMWindow.idl:
* testing/Internals.cpp:
(WebCore::Internals::openDummyInspectorFrontend):

LayoutTests:

* fast/dom/Window/open-invalid-url-expected.txt:
* fast/dom/Window/open-invalid-url.html:

Canonical link: https://commits.webkit.org/203801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235050 268f45cc-cd09-0410-ab3c-d52691b4dbfc